# transformer-finetune-api

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/app/: __init__.py  config.py  main.py  schemas.py
src/app/inference/: __init__.py  predictor.py
src/app/training/: __init__.py  data.py  eval.py  train.py
src/app/utils/: logging.py
tests/: test_api_health.py  test_predictor.py  test_training_data.py
tests/data/: tiny_train.jsonl
