[project]
name = "transformer-finetune-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "transformers>=4.40",
  "torch>=2.2",
  "datasets>=2.18",
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "httpx>=0.27",
  "ruff>=0.3",
  "mypy>=1.8"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1 --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = ["src"]
